@@ -1,3 +1,13 @@
+2005-07-19  Benoît Dejean  <TazForEver@dlfp.org>
+
+	* src/interface.c: (sort_bytes):
+	* src/memmaps.c: (sort_guint64):
+	* src/proctable.c: (sort_ints), (proctable_new):
+	* src/util.h:
+
+	Fixed column default sort order.
+	Closes #310804.
+
 2005-07-16  Benoît Dejean  <TazForEver@dlfp.org>
 
 	* src/prettytable.c: (pretty_table_new):
